--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".dashboard"></activity>
+        <activity android:name=".dashboard" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login" />
