--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Notification"></activity>
+        <activity android:name=".Messaging"></activity>
+        <activity android:name=".Notification" />
         <activity android:name=".ViewSchedule" />
         <activity android:name=".dashboard" />
         <activity
