--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,9 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Notification" />
         <activity android:name=".ViewSchedule" />
-        <activity android:name=".dashboard" />
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
+        <activity android:name=".DashboardActivity" />
+        <activity android:name=".LoginActivity" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
