--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,17 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/skedulr"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/skedulr_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".DaysoffRequest"></activity>
+        <activity android:name=".ViewRequest"></activity>
+        <activity android:name=".ViewBreakdown" />
+        <activity android:name=".ManagerDashboardActivity" />
+        <activity android:name=".ManagerLoginActivity" />
+        <activity android:name=".DaysoffRequest" />
         <activity android:name=".SwitchSchedule" />
         <activity android:name=".ChangeSchedule" />
         <activity android:name=".RequestsActivity" />
